--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Java_workspace\\GUI0811","type":"PROJECT","hints":{"PROJECT_NAME":"GUI0811"}},"ABSENT"],[{"location":"C:\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Java_workspace\\GUI0811\\lib\\json-simple-1.1.1.jar","type":"JAR","hints":{}},"com.googlecode.json-simple:json-simple:1.1.1"]]
