--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Java_workspace\\DB0829","type":"PROJECT","hints":{"PROJECT_NAME":"DB0829"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
