--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\student\\Desktop\\ShoppingMallClient","type":"PROJECT","hints":{"PROJECT_NAME":"ShoppingMallClient"}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Java_workspace\\UrlLoad","type":"PROJECT","hints":{"PROJECT_NAME":"UrlLoad"}},"ABSENT"]]
